Require composer/installers to install in WP path
composer/installers makes it possible to install the package in a
certain directory (not vendor) based on the package type (in this case:
'wordpress-plugin').

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
   "keywords": [
     "wordpress", "acf", "wp", "plugin", "betterplace", "api"
   ],
-  "require": {}
+  "require": {
+    "composer/installers": "^1.2"
+  }
 }
