--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
   ],
   "require": {
     "composer/installers": "^1.2"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^2.7"
+  },
+  "scripts": {
+    "lint": "phpcs src tests --standard=PSR2"
   }
 }
