--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "wordpress", "acf", "wp", "plugin", "betterplace", "api"
   ],
   "require": {
+    "php": ">= 5.6",
     "composer/installers": "^1.2"
   },
   "require-dev": {
