--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
     "composer/installers": "^1.2"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.7"
+    "squizlabs/php_codesniffer": "^2.7",
+    "phpunit/phpunit": "^5.6"
   },
   "scripts": {
-    "lint": "phpcs src tests --standard=PSR2"
+    "coverage": "phpunit --coverage-html coverage",
+    "lint": "phpcs src tests --standard=PSR2",
+    "test": "phpunit"
   }
 }
