--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ script:
   - composer lint
   - composer test
 
+# Send coverage report to coveralls.io
+after_success:
+- travis_retry composer coveralls
+
 # No need for email notifications
 notifications:
 email: false
