--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.7",
-    "phpunit/phpunit": "^5.6"
+    "phpunit/phpunit": "^5.6",
+    "satooshi/php-coveralls": "^1.0"
   },
   "scripts": {
     "coverage": "phpunit --coverage-html coverage",
+    "coveralls": "coveralls",
     "lint": "phpcs src tests --standard=PSR2",
     "test": "phpunit"
   }
